namespace CarWorkshop.Domain.Enums;

public enum JobStatus
{
    Created,
    Assigned,
    InProgress,
    Completed,
    Cancelled
}
